--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,16 @@ description = ""
 authors = ["tehforsch <mail@tonipeter.de>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 h5py = "^3.7.0"
 astropy = "^5.1"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 150
