--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8"
 h5py = "^3.7.0"
 astropy = "^5.1"
 PyYAML = "^6.0"
+numpy = "^1.23.3"
+matplotlib = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 
