--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ astropy = "^5.1"
 PyYAML = "^6.0"
 numpy = "^1.23.3"
 matplotlib = "^3.6.0"
+click = "^8.1.3"
+seaborn = "^0.12.2"
+polars = "^0.18.4"
 
 [tool.poetry.dev-dependencies]
 
